--- a/blog.html
+++ b/blog.html
@@ -53,83 +53,94 @@ Developer: Sergio Pacheco
                     <h2 class = "section-header">Blog Posts</h2>
                     
                     <div class = "row justify-content-center">
-                        <div class = "blog-post-container col-lg d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
-                            <div class = "blog-post-img" id = "">
-                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg">
-                            </div>
-                            <div class = "blog-post-info">
-                                <div class = "blog-post-name">
-                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                        Blog Post 1
-                                    </a>
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                            <div class = "wid-cont d-flex flex-column">
+                                <div class = "blog-post-img" id = "">
+                                    <img alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg">
                                 </div>
-                                This is an example of a blog post listing, with a placeholder image,
-                                title, and description.
-                                <div class = "fw-bold mt-2">
-                                    <span>
-                                        Posted on November 11, 2021
-                                    </span>
-                                    <br>
-                                    <span>
-                                        Author: Sergio P.
-                                    </span>
+                                <div class = "blog-post-info">
+                                    <div class = "blog-post-name">
+                                        <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                            Blog Post 1
+                                        </a>
+                                    </div>
+                                    This is an example of a blog post listing, with a placeholder image,
+                                    title, and description.
+                                    <div class = "fw-bold mt-2">
+                                        <span>
+                                            Posted on November 11, 2021
+                                        </span>
+                                        <br>
+                                        <span>
+                                            Author: Sergio P.
+                                        </span>
+                                    </div>
                                 </div>
+                                <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                    Read Article
+                                </a>
                             </div>
-                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                Read Article
-                            </a>
                         </div>
-                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
-                            <div class = "blog-post-img" id = "">
-                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-2.jpg">
-                            </div>
-                            <div class = "blog-post-info">
-                                <div class = "blog-post-name">
-                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                        Blog Post 2
-                                    </a>
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                            <div class = "wid-cont d-flex flex-column">
+                                <div class = "blog-post-img" id = "">
+                                    <img alt = "placeholder" src = "images/jpg/blog-placeholder-2.jpg">
                                 </div>
-                                This is an example of a blog post listing, with a placeholder image,
-                                title, and description.
-                                <div class = "fw-bold mt-2">
-                                    <span>
-                                        Posted on November 3, 2021
-                                    </span>
-                                    <br>
-                                    <span>
-                                        Author: Gary Z.
-                                    </span>
+                                <div class = "blog-post-info">
+                                    <div class = "blog-post-name">
+                                        <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                            Blog Post 2
+                                        </a>
+                                    </div>
+                                    This is an example of a blog post listing, with a placeholder image,
+                                    title, and description.
+                                    <div class = "fw-bold mt-2">
+                                        <span>
+                                            Posted on November 3, 2021
+                                        </span>
+                                        <br>
+                                        <span>
+                                            Author: Gary Z.
+                                        </span>
+                                    </div>
                                 </div>
+                                <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                    Read Article
+                                </a>
                             </div>
-                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                Read Article
-                            </a>
                         </div>
-                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
-                            <div class = "blog-post-img" id = "rhodoFeast">
-                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-3.jpg">
-                            </div>
-                            <div class = "blog-post-info">
-                                <div class = "blog-post-name">
-                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                        Blog Post 3
-                                    </a>
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                            <div class = "wid-cont d-flex flex-column">
+                                <div class = "blog-post-img" id = "rhodoFeast">
+                                    <img alt = "placeholder" src = "images/jpg/blog-placeholder-3.jpg">
                                 </div>
-                                This is an example of a blog post listing, with a placeholder image,
-                                title, and description.
-                                <div class = "fw-bold mt-2">
-                                    <span>
-                                        Posted on October 28, 2021
-                                    </span>
-                                    <br>
-                                    <span>
-                                        Author: John J.
-                                    </span>
+                                <div class = "blog-post-info">
+                                    <div class = "blog-post-name">
+                                        <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                            Blog Post 3
+                                        </a>
+                                    </div>
+                                    This is an example of a blog post listing, with a placeholder image,
+                                    title, and description.
+                                    <div class = "fw-bold mt-2">
+                                        <span>
+                                            Posted on October 28, 2021
+                                        </span>
+                                        <br>
+                                        <span>
+                                            Author: John J.
+                                        </span>
+                                    </div>
                                 </div>
+                                <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                    Read Article
+                                </a>
                             </div>
-                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
-                                Read Article
-                            </a>
+                        </div>
+                        <div class = "product-container col-lg-4 col-md-6 d-flex flex-column invisible" data-aos = "zoom-in" data-aos-once = "true">
+                            <div class = "wid-cont">
+                                &nbsp;
+                            </div>
                         </div>
                     </div>
                 </div>
