--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@ Developer: Sergio Pacheco
                         <h2 class = "section-header">Community Images</h2>
                         We love when customers submit their images.<br>
                         Send us your tank pictures and get featured on our website!<br>
-                        Submit us your photos on our Facebook page:
+                        Submit your photos on our Facebook page, or on Instagram:
+                        <br>
                         <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.facebook.com/WillowsReef/" rel = "noopener norferrer">
-                            <i class = "fab fa-facebook"></i> Willow's Reef LLC
+                            <i class = "fab fa-facebook-square"></i>
                             <span class = "sr-only">Willow's Reef Facebook Link</span>
                         </a>
+                        <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.instagram.com/willowsreef/" rel = "noopener norferrer">
+                            <i class = "fab fa-instagram-square"></i>
+                            <span class = "sr-only">Willow's Reef Instagram Link</span>
+                        </a>
+                        <br>
                         Tag us in your posts <b>@WillowsReef</b> or <b>#coralfeast</b>
 
                         <a href = "/Willows-Reef-Mock-Up/community-images.html" class = "link-button">
