--- a/community-images.html
+++ b/community-images.html
@@ -57,11 +57,19 @@ Developer: Sergio Pacheco
                     <div class = "text-center mb-4">
                         Here at Willow's Reef, we love our fellow aquarists - and we certainly love their tanks!<br>
                         Send us your tank pictures and get featured on our website!<br><br>
-                        Submit us your photos on our Facebook page:  
+                        Submit your photos on our Facebook page:  
                         <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.facebook.com/WillowsReef/" rel = "noopener norferrer">
                             <i class = "fab fa-facebook"></i> Willow's Reef LLC
                             <span class = "sr-only">Willow's Reef Facebook Link</span>
                         </a>
+                        <br>
+                        Tag us in your pictures on Instagram:
+                        <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.instagram.com/willowsreef/" rel = "noopener norferrer">
+                            <i class = "fab fa-instagram"></i> Willow's Reef LLC
+                            <span class = "sr-only">Willow's Reef Instagram Link</span>
+                        </a> 
+                        <br>
+                        Tags: <b>@WillowsReef</b> or <b>#coralfeast</b>
                     </div>
 
                     <!-- PhotoSwipe Image Gallery - START -->
