--- a/community-images.html
+++ b/community-images.html
@@ -65,7 +65,7 @@ Developer: Sergio Pacheco
                         <br>
                         Tag us in your pictures on Instagram:
                         <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.instagram.com/willowsreef/" rel = "noopener norferrer">
-                            <i class = "fab fa-instagram"></i> Willow's Reef LLC
+                            <i class = "fab fa-instagram"></i> @willowsreef
                             <span class = "sr-only">Willow's Reef Instagram Link</span>
                         </a> 
                         <br>
