--- a/community-images.html
+++ b/community-images.html
@@ -78,19 +78,19 @@ Developer: Sergio Pacheco
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-1.jpg');">
                                 &nbsp;
                             </div>
-                            <figure>[Description of image]</figure>
+                            <figure>Photo By: Willow's Reef</figure>
                         </a>
                         <a href = "images/jpg/customer-images/customer-img-2.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-2.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-2.jpg');">
                                 &nbsp;
                             </div>                                
-                            <figure>[Description of image]</figure>
+                            <figure>Photo By: Willow's Reef</figure>
                         </a>
                         <a href = "images/jpg/customer-images/customer-img-3.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-3.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-3.jpg');">
                                 &nbsp;
                             </div>
-                            <figure>[Description of image]</figure>
+                            <figure>Photo By: Willow's Reef</figure>
                         </a>
                     </div>
 
