--- a/amino-feast.html
+++ b/amino-feast.html
@@ -101,7 +101,7 @@ Developer: Sergio Pacheco
                 <!-- Product Overview - END -->
 
                 <!-- In-depth Product Description - START -->
-                <h2 class = "section-header">Product Description</h2>
+                <h2 class = "section-header mb-3">Product Description</h2>
                 <div class = "full-descript">
                     AminoFeast+ is a blend of 8 amino acids with an all-natural buffer of potassium which is something that 
                     corals utilize. Our #1 goal was to bring an additive to our food line that helps your corals THRIVE while 
