--- a/coral-feast.html
+++ b/coral-feast.html
@@ -132,7 +132,7 @@ Developer: Sergio Pacheco
                 <!-- Product Overview - END -->
 
                 <!-- In-depth Product Description - START -->
-                <h2 class = "section-header">Product Description</h2>
+                <h2 class = "section-header mb-3">Product Description</h2>
                 <div class = "full-descript">
                     CoralFeast is made with nine all-natural 100% aquatic ingredients to help promote your corals' best 
                     growth and color. There are no fillers of ANY kind like corn starch, flours, yeasts, fish protein 
