--- a/frozen-feast.html
+++ b/frozen-feast.html
@@ -74,7 +74,7 @@ Developer: Sergio Pacheco
                 <!-- Product Overview - END -->
 
                 <!-- In-depth Product Description - START -->
-                <h2 class = "section-header">Product Description</h2>
+                <h2 class = "section-header mb-3">Product Description</h2>
                 <div class = "full-descript">
                     Shelf-stable natural bacterium (B. subtilis and B. lichenformis) are used in conjunction because they 
                     germinate under slightly different conditions, e.g., salinity and temperature, giving the user a better 
