--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -96,7 +96,7 @@ Developer: Sergio Pacheco
                 <!-- Product Overview - END -->
 
                 <!-- In-depth Product Description - START -->
-                <h2 class = "section-header">Product Description</h2>
+                <h2 class = "section-header mb-3">Product Description</h2>
                 <div class = "full-descript">
                     <b>
                         What is it?
