--- a/amino-feast.html
+++ b/amino-feast.html
@@ -63,17 +63,17 @@ Developer: Sergio Pacheco
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Amazon" src = "images/test/test-1.png">
+                                <img alt = "Amazon" src = "images/png/store-logos/amazon-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/3-4-frag-plug/" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Coral Hub" src = "images/test/test-4.png">
+                                <img alt = "Coral Hub" src = "images/png/store-logos/coral-hub-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://reefshackllc.com/products/amino-feast-coral-food-amino-acid-250ml?_pos=1&_sid=71bb8333e&_ss=r" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Reef Shack" src = "images/test/test-6.png">
+                                <img alt = "Reef Shack" src = "images/png/store-logos/reef-shack-logo.png">
                             </div>
                         </a>
                     </div>
