--- a/coral-feast.html
+++ b/coral-feast.html
@@ -63,47 +63,47 @@ Developer: Sergio Pacheco
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Amazon" src = "images/test/test-1.png">
+                                <img alt = "Amazon" src = "images/png/store-logos/amazon-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Advanced Aquarium Consultancy" src = "images/test/test-9.png" >
+                                <img alt = "Advanced Aquarium Consultancy" src = "images/png/store-logos/aac-logo.png" >
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "AquaCave" src = "images/test/test-2.png" >
+                                <img alt = "AquaCave" src = "images/png/store-logos/aquacave-logo.png" >
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Aquarium Specialty" src = "images/test/test-3.png">
+                                <img alt = "Aquarium Specialty" src = "images/png/store-logos/aqua-spec-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Coral Hub" src = "images/test/test-4.png">
+                                <img alt = "Coral Hub" src = "images/png/store-logos/coral-hub-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Noopsyche USA" src = "images/test/test-5.png">
+                                <img alt = "Noopsyche USA" src = "images/png/store-logos/noopsyche-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Reef Shack" src = "images/test/test-6.png">
+                                <img alt = "Reef Shack" src = "images/png/store-logos/reef-shack-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "IndieFur" src = "images/test/test-8.png">
+                                <img alt = "IndieFur" src = "images/png/store-logos/indie-fur-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Kraken Corals" src = "images/test/test-7.svg">
+                                <img alt = "Kraken Corals" src = "images/png/store-logos/kraken-corals-logo.png">
                             </div>
                         </a>
                     </div>
