--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -63,12 +63,12 @@ Developer: Sergio Pacheco
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Coral Hub" src = "images/test/test-4.png">
+                                <img alt = "Coral Hub" src = "images/png/store-logos/coral-hub-logo.png">
                             </div>
                         </a>
                         <a class = "col-6 store-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer">
                             <div>
-                                <img alt = "Reef Shack" src = "images/test/test-6.png">
+                                <img alt = "Reef Shack" src = "images/png/store-logos/reef-shack-logo.png">
                             </div>
                         </a>
                     </div>
