--- a/stores-page.html
+++ b/stores-page.html
@@ -58,7 +58,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
                                 <div class = "store-logo">
-                                    <img alt = "Amazon" src = "images/test/test-1.png">
+                                    <img alt = "Amazon" src = "images/png/store-logos/amazon-logo.png">
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -77,7 +77,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aacTab">
                                 <div class = "store-logo">
-                                    <img alt = "Advanced Aquarium Consultancy" src = "images/test/test-9.png" >
+                                    <img alt = "Advanced Aquarium Consultancy" src = "images/png/store-logos/aac-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -93,7 +93,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
                                 <div class = "store-logo">
-                                    <img alt = "AquaCave" src = "images/test/test-2.png" >
+                                    <img alt = "AquaCave" src = "images/png/store-logos/aquacave-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -111,7 +111,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquariumSpecialtyTab">
                                 <div class = "store-logo">
-                                    <img alt = "Aquarium Specialty" src = "images/test/test-3.png" >
+                                    <img alt = "Aquarium Specialty" src = "images/png/store-logos/aqua-spec-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -127,7 +127,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
                                 <div class = "store-logo">
-                                    <img alt = "Coral Hub" src = "images/test/test-4.png" >
+                                    <img alt = "Coral Hub" src = "images/png/store-logos/coral-hub-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -149,7 +149,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "noopsycheTab">
                                 <div class = "store-logo">
-                                    <img alt = "Noopsyche USA" src = "images/test/test-5.png" >
+                                    <img alt = "Noopsyche USA" src = "images/png/store-logos/noopsyche-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -165,7 +165,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "reefShackTab">
                                 <div class = "store-logo">
-                                    <img alt = "Reef Shack" src = "images/test/test-6.png" >
+                                    <img alt = "Reef Shack" src = "images/png/store-logos/reef-shack-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -187,7 +187,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "indieFurTab">
                                 <div class = "store-logo">
-                                    <img alt = "IndieFur" src = "images/test/test-8.png" >
+                                    <img alt = "IndieFur" src = "images/png/store-logos/indie-fur-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -203,7 +203,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "krakenTab">
                                 <div class = "store-logo">
-                                    <img alt = "Kraken Corals" src = "images/test/test-7.svg" >
+                                    <img alt = "Kraken Corals" src = "images/png/store-logos/kraken-corals-logo.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
