--- a/about-page.html
+++ b/about-page.html
@@ -64,11 +64,11 @@ Developer: Sergio Pacheco
                         <br><br>
                         We are an ever-growing collection of like-minded aquarium lovers, and we are looking to make our products 
                         available to even more people as we continue to expand. If you have any suggestions, or want to see our 
-                        products at your favorite shop, feel free to <a href = "#contactAnch">reach out</a> and let us know! 
+                        products at your favorite shop, feel free to <a href = "#contactAnch" class = "text-decoration-none fw-bold">reach out</a> and let us know! 
                         <br><br>
                         Currently, our products are only available through wholesale and our partnered distributors. 
-                        Please see our <a href = "/Willows-Reef-Mock-Up/products-page.html">Individual Products</a> page for more information on purchasing our products 
-                        for your tank. Please see our <a href = "/Willows-Reef-Mock-Up/wholesale-page.html">Wholesale Products</a> page for more information on purchasing our products 
+                        Please see our <a href = "/Willows-Reef-Mock-Up/products-page.html" class = "text-decoration-none fw-bold">Individual Products</a> page for more information on purchasing our products 
+                        for your tank. Please see our <a href = "/Willows-Reef-Mock-Up/wholesale-page.html" class = "text-decoration-none fw-bold">Wholesale Products</a> page for more information on purchasing our products 
                         in bulk for your store location.
                     </div>
                 </div>
