--- a/about-page.html
+++ b/about-page.html
@@ -67,8 +67,11 @@ Developer: Sergio Pacheco
                         products at your favorite shop, feel free to <a href = "#contactAnch" class = "text-decoration-none fw-bold">reach out</a> and let us know! 
                         <br><br>
                         Currently, our products are only available through wholesale and our partnered distributors. 
+                        <br>
                         Please see our <a href = "/Willows-Reef-Mock-Up/products-page.html" class = "text-decoration-none fw-bold">Individual Products</a> page for more information on purchasing our products 
-                        for your tank. Please see our <a href = "/Willows-Reef-Mock-Up/wholesale-page.html" class = "text-decoration-none fw-bold">Wholesale Products</a> page for more information on purchasing our products 
+                        for your tank. 
+                        <br>
+                        Please see our <a href = "/Willows-Reef-Mock-Up/wholesale-page.html" class = "text-decoration-none fw-bold">Wholesale Products</a> page for more information on purchasing our products 
                         in bulk for your store location.
                     </div>
                 </div>
