--- a/about-page.html
+++ b/about-page.html
@@ -48,6 +48,9 @@ Developer: Sergio Pacheco
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
+            <div class = "" style = "width: 100%; max-height: 20rem; overflow: hidden; display: block;">
+                <img alt = "" src = "images/jpg/compressed-main-images/about-us-header.jpg" class = "" style = "width: inherit;">
+            </div>
             <div id = "aboutSection" class = "container-fluid">
                 <div class = "row justify-content-center mt-4">
                     <h2 class = "section-header">Who We Are</h2>
