--- a/about-page.html
+++ b/about-page.html
@@ -48,7 +48,7 @@ Developer: Sergio Pacheco
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div class = "" style = "width: 100%; max-height: 20rem; overflow: hidden; display: block;">
+            <div class = "" style = "width: 100%; max-height: 20rem; overflow: hidden; display: block; margin-bottom: -5%;">
                 <img alt = "" src = "images/jpg/compressed-main-images/about-us-header.jpg" class = "" style = "width: inherit;">
             </div>
             <div id = "aboutSection" class = "container-fluid">
