--- a/amino-feast.html
+++ b/amino-feast.html
@@ -77,6 +77,11 @@ Developer: Sergio Pacheco
                             </div>
                         </a>
                     </div>
+                    <div>
+                        <a href = "/Willows-Reef-Mock-Up/stores-page.html" class = "link-button">
+                            All Stores
+                        </a>
+                    </div>
                 </div>
                 <!-- Stores List Pop-Up (Shows Locations that Sell this Product) - END -->
 
