--- a/amino-feast.html
+++ b/amino-feast.html
@@ -98,7 +98,7 @@ Developer: Sergio Pacheco
                         your corals THRIVE while having as little negative impact on your ecosystem as possible.
                         <br><br>
 
-                        <button class = "link-button">
+                        <button class = "link-button" id = "seeStores">
                             See Stores
                         </button>
                     </div>
