--- a/coral-feast.html
+++ b/coral-feast.html
@@ -124,7 +124,7 @@ Developer: Sergio Pacheco
                         fish protein powder, garlic powder, or bioenhancers.
                         <br><br>
 
-                        <button class = "link-button">
+                        <button class = "link-button" id = "seeStores">
                             See Stores
                         </button>
                     </div>
