--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -72,11 +72,6 @@ Developer: Sergio Pacheco
                             </div>
                         </a>
                     </div>
-                    <div>
-                        <a href = "/Willows-Reef-Mock-Up/stores-page.html" class = "link-button">
-                            All Stores
-                        </a>
-                    </div>
                 </div>
                 <!-- Stores List Pop-Up (Shows Locations that Sell this Product) - END -->
 
@@ -93,7 +88,7 @@ Developer: Sergio Pacheco
                         This is a live probiotic. The bacteria in this product are cultured in a specific manner that makes them adapted to colonizing the animal gut. Their express purpose is to provide nutritional and immunological benefits to the fish, corals and other animals that consume them. 
                         <br><br>
 
-                        <button class = "link-button">
+                        <button class = "link-button" id = "seeStores">
                             See Stores
                         </button>
                     </div>
