--- a/coral-feast.html
+++ b/coral-feast.html
@@ -58,7 +58,7 @@ Developer: Sergio Pacheco
                         &nbsp;
                     </i>
                     <div class = "popup-header">
-                        Available At:
+                        Recommended Stores:
                     </div>
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank" rel = "noopener norferrer">
