--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -58,7 +58,7 @@ Developer: Sergio Pacheco
                         &nbsp;
                     </i>
                     <div class = "popup-header">
-                        Available At:
+                        Recommended Stores:
                     </div>
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank" rel = "noopener norferrer">
