--- a/amino-feast.html
+++ b/amino-feast.html
@@ -58,7 +58,7 @@ Developer: Sergio Pacheco
                         &nbsp;
                     </i>
                     <div class = "popup-header">
-                        Available At:
+                        Recommended Stores:
                     </div>
                     <div class = "row">
                         <a class = "col-6 store-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank" rel = "noopener norferrer">
